--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     /* Profile picture - desktop: keep large, mobile: smaller */
     .profile-pic {
       display: block;
-      width: 85%;
+      width: 95%;
       max-width: 420px;
       margin-top: 3.5rem;
       margin-bottom: 2.2rem;
@@ -609,14 +609,16 @@
 </head>
 <body>
   <nav>
-    <h1>@rupam.</h1>
+    <h1>Arup@m.</h1>
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#research">Research</a></li>
+      <li><a href="#gallary">Gallary</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
     <button class="hamburger" aria-label="Open navigation menu" aria-controls="navMobileMenu" aria-expanded="false">
+      <span class="hamburger-bar"></span>
       <span class="hamburger-bar"></span>
       <span class="hamburger-bar"></span>
       <span class="hamburger-bar"></span>
@@ -625,6 +627,7 @@
     <ul class="nav-links-mobile" id="navMobileMenu" role="menu" aria-label="Mobile navigation menu" tabindex="-1" style="display:none;">
       <li><a href="#education" role="menuitem" tabindex="0">Education</a></li>
       <li><a href="#research" role="menuitem" tabindex="0">Research</a></li>
+      <li><a href="#gallary" role="menuitem" tabindex="0">Gallary</a></li>
       <li><a href="#get-in-touch" role="menuitem" tabindex="0">Get in Touch</a></li>
     </ul>
     <div class="nav-overlay"></div>
