--- a/index.html
+++ b/index.html
@@ -624,18 +624,10 @@
     <div class="hero-text-side">
       <h1>Greetings Everyone!!</h1>
       <div class="hero-desc">
-        I'm Arupam Biswas, a Neuroscience Researcher fueled by a deep curiosity about how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am pursuing a PhD at
+        My name is Arupam Biswas and I'm a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where as a Doctoral Candidate at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          Institute of Developmental Biology and Neurobiology(iDN).
-        </a>
-        <br><br>
-        My work focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system regeneration after Traumatic Brain injury(TBI)/Spinal Cord Injury(SCI) or in conditions like Multiple Sclerosis(MS). This research is carried out in collaboration with the
-        <a href="https://lir-mainz.de/en/lir" target="_blank">
-          Leibniz Institute for Resilience Research(LIR)
-        </a> and the
-        <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research(MPI-P),
-        </a> Germany.
+          Institute of Developmental Biology and Neurobiology(iDN), 
+        </a> my focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system regeneration after Traumatic Brain injury(TBI)/Spinal Cord Injury(SCI) or in conditions like Multiple Sclerosis(MS).
         <br><br>
         Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
         <br><br>
