--- a/index.html
+++ b/index.html
@@ -624,10 +624,10 @@
     <div class="hero-text-side">
       <h1>Greetings Everyone!!</h1>
       <div class="hero-desc">
-        My name is Arupam Biswas and I'm a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where as a Doctoral Candidate at
+        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently a Doctoral Candidate at the
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          Institute of Developmental Biology and Neurobiology(iDN), 
-        </a> my focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system regeneration after Traumatic Brain injury(TBI)/Spinal Cord Injury(SCI) or in conditions like Multiple Sclerosis(MS).
+          Institute of Developmental Biology and Neurobiology(iDN). 
+        </a> My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support CNS regeneration after traumatic brain injury (TBI), spinal cord injury (SCI), or in conditions like multiple sclerosis (MS).
         <br><br>
         Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
         <br><br>
