--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#education">Education</a></li>
       <li><a href="#research">Research</a></li>
-      <li><a href="#gallary">Gallary</a></li>
+      <li><a href="#gallary">Gallery</a></li>
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
     <button class="hamburger" aria-label="Open navigation menu" aria-controls="navMobileMenu" aria-expanded="false">
@@ -592,9 +592,10 @@
     </button>
     <!-- Mobile nav menu (initially hidden) -->
     <ul class="nav-links-mobile" id="navMobileMenu" role="menu" aria-label="Mobile navigation menu" tabindex="-1" style="display:none;">
+      <li><a href="#home" role="menuitem" tabindex="0">Home</a></li>
       <li><a href="#education" role="menuitem" tabindex="0">Education</a></li>
       <li><a href="#research" role="menuitem" tabindex="0">Research</a></li>
-      <li><a href="#gallary" role="menuitem" tabindex="0">Gallary</a></li>
+      <li><a href="#gallary" role="menuitem" tabindex="0">Gallery</a></li>
       <li><a href="#get-in-touch" role="menuitem" tabindex="0">Get in Touch</a></li>
     </ul>
     <div class="nav-overlay"></div>
@@ -604,19 +605,19 @@
     <div class="hero-img-side">
       <img src="your-profile-picture.jpg" alt="Profile Picture" class="profile-pic" />
       <div class="social-links hero-social">
-        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
+        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" rel="noopener noreferrer" class="facebook">
           <img src="facebookff.jpg" alt="Facebook Logo">
         </a>
-        <a href="https://www.instagram.com/arupambiswas/" target="_blank" class="instagram">
+        <a href="https://www.instagram.com/arupambiswas/" target="_blank" rel="noopener noreferrer" class="instagram">
           <img src="InstagramF.jpg" alt="Instagram Logo">
         </a>
-        <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank" class="linkedin">
+        <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank" rel="noopener noreferrer" class="linkedin">
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
-        <a href="https://x.com/arupamb07" target="_blank" class="twitter">
+        <a href="https://x.com/arupamb07" target="_blank" rel="noopener noreferrer" class="twitter">
           <img src="twitterFL.jpg" alt="X Logo">
         </a>
-        <a href="mailto:arupambiswas007@gmail.com" target="_blank" class="gmail">
+        <a href="mailto:arupambiswas007@gmail.com" target="_blank" rel="noopener noreferrer" class="gmail">
           <img src="gmail.jpg" alt="Gmail Logo">
         </a>
       </div>
@@ -625,9 +626,9 @@
       <h1>Greetings Everyone!!</h1>
       <div class="hero-desc">
         My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently a Doctoral Candidate at the
-        <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          Institute of Developmental Biology and Neurobiology(iDN). 
-        </a> My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support CNS regeneration after traumatic brain injury (TBI), spinal cord injury (SCI), or in conditions like multiple sclerosis (MS).
+        <a href="https://idn.biologie.uni-mainz.de/" target="_blank" rel="noopener noreferrer">
+          Institute of Developmental Biology and Neurobiology(iDN)
+        </a>. My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support CNS regeneration after traumatic brain injury (TBI), spinal cord injury (SCI), or in conditions like multiple sclerosis (MS).
         <br><br>
         Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
         <br><br>
@@ -644,7 +645,7 @@
         <p class="card-date">2025-Present Day</p>
         <p>
           <strong>
-            <a href="https://www.uni-mainz.de/" target="_blank" class="edu-link">
+            <a href="https://www.uni-mainz.de/" target="_blank" rel="noopener noreferrer" class="edu-link">
               Johannes Gutenberg University Mainz
             </a>, Germany.
           </strong>
@@ -652,7 +653,7 @@
         <ul>
           <li>Title: Interactive Biomaterials for Neural Regeneration.</li>
           <li>Principal Investigators: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra, 
-            <a href="https://idn.biologie.uni-mainz.de/" target="_blank" class="edu-link">
+            <a href="https://idn.biologie.uni-mainz.de/" target="_blank" rel="noopener noreferrer" class="edu-link">
               Institute of Developmental Biology and Neurobiology (iDN)
             </a>, Germany.
           </li>
@@ -663,7 +664,7 @@
         <p class="card-date">2019-2024</p>
         <p>
           <strong>
-            <a href="https://www.visvabharati.ac.in/index.html" target="_blank" class="edu-link">
+            <a href="https://www.visvabharati.ac.in/index.html" target="_blank" rel="noopener noreferrer" class="edu-link">
               Visva-Bharati, India
             </a>
           </strong>
@@ -671,10 +672,10 @@
         <ul>
           <li>Master's Thesis: High-Content Screening for neurite growth analyses: Evaluating gene treatments</li>
           <li>Principal Investigator: 
-            <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" class="edu-link">
+            <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" rel="noopener noreferrer" class="edu-link">
               Dr. Ishwariya Venkatesh
             </a>, Senior Scientist,
-            <a href="https://www.ccmb.res.in/" target="_blank" class="edu-link">
+            <a href="https://www.ccmb.res.in/" target="_blank" rel="noopener noreferrer" class="edu-link">
               CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB)
             </a>, India
           </li>
@@ -693,7 +694,7 @@
             <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
             <p>
               Traumatic CNS injuries and diseases like MS lead to lasting disability due to poor regenerative capacity. Barriers include glial scarring, inhibitory debris, lack of axonal guidance, and inefficient remyelination. In MS, immune attacks damage myelin, and remyelination declines with disease progression and age. While immune-targeting therapies exist, effective regeneration treatments are still lacking. The
-              <a href="https://intereg.uni-mainz.de/" target="_blank" style="text-decoration: none; color: inherit;">
+              <a href="https://intereg.uni-mainz.de/" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit;">
                 Interactive Biomaterials for Neural Regeneration (InteReg)
               </a> project is a five-year collaboration between Johannes Gutenberg University Mainz, the Max Planck Institute for Polymer Research, and the Leibniz Institute for Resilience Research, aiming to develop precision biomaterials for treating neurological diseases. InteReg focuses on creating programmable materials that guide central nervous system cell regeneration following injuries or in conditions like multiple sclerosis and traumatic injuries (SCI, TBI).
             </p>
@@ -716,16 +717,16 @@
           </div>
         </div>
       </div>
-      <button class="carousel-button prev">‹</button>
-      <button class="carousel-button next">›</button>
+      <button class="carousel-button prev" type="button" aria-label="Previous research project">‹</button>
+      <button class="carousel-button next" type="button" aria-label="Next research project">›</button>
     </div>
   </section>
   <!-- Get in Touch Section -->
   <section class="get-in-touch" id="get-in-touch">
     <h2>Get in Touch</h2>
-    <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
+    <p><strong>Email:</strong> <a href="mailto:arupambiswas007@gmail.com">arupambiswas007@gmail.com</a></p>
     <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, 
-      <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">
+      <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank" rel="noopener noreferrer">
         Venkatesh Lab
       </a> CSIR-CCMB
     </p>
@@ -831,7 +832,9 @@
       updateCarousel();
     });
     window.addEventListener('resize', updateCarousel);
-    updateCarousel();
+
+    // Ensure carousel is properly sized on load
+    window.addEventListener('DOMContentLoaded', updateCarousel);
   </script>
 </body>
 </html>
